# GOWIN-template

./: .env.example  .gitignore  Dockerfile  README.md  claude.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/config/: config.py
src/core/: abstract.py  database.py  logger.py  ollama_client.py
src/message_queue/: tracker.py
src/models/: __init__.py  arxiv.py  base.py
src/workers/: controller.py
src/workers/connectors/: arxiv.py
src/workers/processors/: ollama_filter.py
